backend/plans/task-1-1771323040348246066/results/task-1-1771323040348246066_output.txt
Task ID: task-1-1771323040348246066
Description: Deepseek是否已经发布最新版本？回答：是 或 不是。
Status: Completed
Duration: 11m15.175642145s
Files Generated: 4
Generated Files Directory: plans/task-1-1771323040348246066/results/task-1-1771323040348246066_files

Files:
- requirements.txt
- README.md
- version_check.py
- check_deepseek_version.py

Agent Execution Summary:
1. planner - 1m0.203787627s
2. coder - 1m51.047739034s
3. executor - 3.526820692s
4. coder - 1m54.645207356s
5. executor - 29.710711ms
   Error: command execution failed: exit status 1
Output:   File "/tmp/agent-tasks/task-1-1771323040348246066/version_check.py", line 635
    [CODE END]
     ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

6. debugger - 40.094835518s
7. executor - 27.008927ms
   Error: command execution failed: exit status 1
Output:   File "/tmp/agent-tasks/task-1-1771323040348246066/version_check.py", line 635
    [CODE END]
     ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

8. planner - 1m37.268860906s
9. executor - 386.252478ms
10. executor - 189.826773ms
11. reviewer - 46.90683559s
12. debugger - 1m23.372791809s
13. executor - 57.359396ms
   Error: command execution failed: exit status 1
Output:   File "/tmp/agent-tasks/task-1-1771323040348246066/version_check.py", line 635
    [CODE END]
     ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

14. debugger - 1m1.215184861s
15. executor - 31.392585ms
   Error: command execution failed: exit status 1
Output:   File "/tmp/agent-tasks/task-1-1771323040348246066/version_check.py", line 635
    [CODE END]
     ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

16. planner - 56.168866873s
